--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
+application.properties
+src/main/resources/application.properties
+
 HELP.md
 .gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+
 
 ### STS ###
 .apt_generated
