--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,11 @@ STRIPE_SECRET_KEY = sk_test_51IP7rtCgi2LPcAhCgK6FvTKEb5iBym52plN2iDW44aH6rJOQWqX
 # the db will be stored in a file that persist across app restarts
 spring.h2.console.enabled = true
 spring.h2.console.path = /console
-spring.datasource.url = jdbc:h2:file:~/ecomsite
+spring.datasource.url = jdbc:h2:file:~/ecommsite
 spring.datasource.username = sa
 spring.datasource.password =
 spring.datasource.driver-class-name = org.h2.Driver
-
+#
 # show sql queries in console
 spring.jpa.show-sql = true
 
